# sanakirja_facade

./: .gitignore  Cargo.toml  README.md
examples/: typed_wrapper.rs
sanakirja/: Cargo.toml  LICENSE-MIT  README.md
sanakirja/src/: del.rs  lib.rs  put.rs  skiplist.rs  tests.rs  transaction.rs  value.rs
sanakirja_facade_derive/: Cargo.toml
sanakirja_facade_derive/src/: lib.rs
sanakirja_facade_derive/tests/: basic.rs
src/: buf.rs  db.rs  lib.rs  representable.rs
src/stored/: mod.rs  primitives.rs
tests/: basic.rs
